[gd_scene load_steps=3 format=3 uid="uid://cb3yb4plq43bt"]

[ext_resource type="Script" path="res://level_select.gd" id="1_yce8m"]
[ext_resource type="Script" path="res://button.gd" id="2_pmymv"]

[node name="level_select" type="Node2D"]
script = ExtResource("1_yce8m")

[node name="Button" type="Button" parent="."]
offset_left = 49.0
offset_top = 37.0
offset_right = 63.0
offset_bottom = 61.0
disabled = true
text = "1"
script = ExtResource("2_pmymv")

[node name="Button2" type="Button" parent="."]
offset_left = 95.0
offset_top = 37.0
offset_right = 111.0
offset_bottom = 61.0
disabled = true
text = "2"
script = ExtResource("2_pmymv")

[node name="Button3" type="Button" parent="."]
offset_left = 141.0
offset_top = 36.0
offset_right = 157.0
offset_bottom = 60.0
disabled = true
text = "3"
script = ExtResource("2_pmymv")

[node name="Button4" type="Button" parent="."]
offset_left = 48.0
offset_top = 90.0
offset_right = 64.0
offset_bottom = 114.0
disabled = true
text = "4"
script = ExtResource("2_pmymv")

[node name="Button5" type="Button" parent="."]
offset_left = 94.0
offset_top = 88.0
offset_right = 110.0
offset_bottom = 112.0
disabled = true
text = "5"
script = ExtResource("2_pmymv")

[node name="Button6" type="Button" parent="."]
offset_left = 141.0
offset_top = 87.0
offset_right = 157.0
offset_bottom = 111.0
disabled = true
text = "6"
script = ExtResource("2_pmymv")

[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="button_up" from="Button2" to="Button2" method="_on_button_up"]
[connection signal="button_up" from="Button3" to="Button3" method="_on_button_up"]
[connection signal="button_up" from="Button4" to="Button4" method="_on_button_up"]
[connection signal="button_up" from="Button5" to="Button5" method="_on_button_up"]
[connection signal="button_up" from="Button6" to="Button6" method="_on_button_up"]
